# nixvscode

./: .gitignore  README.md  flake.nix
common/: default.nix  shell.nix  terminal.nix  workspace.nix  zen-mode.nix
common/vim/: bookmarks.nix  default.nix  file-explorer.nix  file-management.nix  rundebug.nix  search.nix
config/: archived.nix  avante.nix  default.nix  greeter.nix  keymaps.nix  theme.nix  vim.nix  zen-mode.nix
config/lsp/: cobol.nix  copilot.nix  cplusplus.nix  csharp.nix  dap.nix  dart.nix  default.nix  dlang.nix  erlang.nix  formatting.nix  golang.nix  haskell.nix  java.nix  kotlin.nix  lua.nix  markdown.nix  neotest.nix  nix.nix  ocaml.nix  python.nix  ruby.nix  rust.nix  scala.nix  shell.nix  terraform.nix  typescript.nix  zig.nix
config/theme/: default.nix  jellybeans.nix
config/tools/: aichat.nix  bookmarks.nix  bqf.nix  coverage.nix  db-tools.nix  dbcode.nix  debugging.nix  default.nix  file-explorer.nix  gitdiff.nix  gitlens.nix  gitsigns.nix  kubernetes.nix  left-status.nix  mini.nix  nginx.nix  noice.nix  ollama.nix  rest-client.nix  snacks.nix  sqlite.nix  terminal.nix  testing.nix  tree.nix  whichkey.nix  workspace.nix
config/vim/: agent.nix  bookmarks.nix  code-inspection.nix  default.nix  file-management.nix  rundebug.nix  window-management.nix
docs/: README.md
lib/: builder.nix  debug.nix  funcs.nix  importer.nix  options.nix
lib/editors/: void.nix
options/: default.nix
options/lsp/: cobol.nix  lua.nix  (+18 more)
samples/: README.md
samples/python/poetry-demo/: pyproject.toml
samples/python/poetry-demo/poetry_demo/: __init__.py
(+26 files in other folders)
