[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Wright",email = "mkwright@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
